--- a/304.Manage/BV.Application/TiepNhanHoSo/App.config
+++ b/304.Manage/BV.Application/TiepNhanHoSo/App.config
@@ -1,13 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework"
+             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
+             requirePermission="false" />
   </configSections>
   <connectionStrings>
     <!--<add name="BVEntities" connectionString="metadata=res://*/BVDataModel.csdl|res://*/BVDataModel.ssdl|res://*/BVDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=BV304;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="BVEntities" connectionString="metadata=res://*/BVDataModel.csdl|res://*/BVDataModel.ssdl|res://*/BVDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.159.131;initial catalog=BV304;persist security info=True;user id=sa;password=sa;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="BVEntities"
+         connectionString="metadata=res://*/BVDataModel.csdl|res://*/BVDataModel.ssdl|res://*/BVDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=192.168.159.131;initial catalog=BV304;persist security info=True;user id=sa;password=sa;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+         providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -16,7 +21,8 @@
       </parameters>
     </defaultConnectionFactory>
     <providers>
-      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <provider invariantName="System.Data.SqlClient"
+                type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
 </configuration>
